# genai-email-report-drafting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-frontend.yml  ci-python.yml  release.yml
docs/: 01_abstract.md  02_key-features.md  02_requirements.md  03_setup.md  04_usage.md  07_repository_structure.md
docs/api/: openapi.yaml
docs/diagrams/: system-architecture-simple.mmd
docs/reports/: 01_final-report.md  02_viva-faqs.md
src/backend/: .env.example  .flake8  README.md  app.py  config.py  db.py  requirements.txt
src/backend/models/: __init__.py  audit_log.py  document.py  user.py
src/backend/routes/: README.md  __init__.py  admin.py  auth.py  documents.py  history.py
src/backend/services/: README.md  __init__.py  gemini_service.py  prompt_engine.py
src/backend/tests/: __init__.py  conftest.py  smoke_test.py  test_admin.py  test_auth.py  test_documents.py  test_gemini_service.py  test_history.py  test_models.py  test_prompt_engine.py
src/backend/utils/: __init__.py  audit_helpers.py  request_helpers.py  validators.py
src/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: client.ts
src/frontend/src/components/: AdminRoute.tsx  ErrorBoundary.tsx  Layout.tsx  PrivateRoute.tsx  SkipNavigation.tsx
src/frontend/src/pages/: AdminDashboard.tsx  EmailGenerator.tsx  History.tsx  LandingPage.tsx  Login.tsx  Register.tsx  ReportGenerator.tsx
src/frontend/src/store/: authSlice.ts  documentsSlice.ts  hooks.ts  index.ts
src/frontend/src/types/: index.ts
